# medusa_website

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Procfile  README.md  docs_dump.json  manage.py  package-lock.json  package.json  post_commit.sh  post_commit_nostatic.sh  pyproject.toml  release-tasks.sh  requirements.txt  requirements_prod.txt  setup.cfg  start_backend.sh  start_console.py  start_frontend.sh  start_glances.sh  stop_glances.sh  webpack-stats.json  webpack.config.js
.github/workflows/: deploy.yml
assets/js/: index.js
assets/modules/core/: sentry-6.13.2.min.js
assets/modules/juicer/: juicer.io.css  juicer.io.min.js
assets/webpack_bundles/: main-649ff060c455602dfec2.js  main-8276b2438595c20442d9.js  main-90c0e1bd95c9a816890a.js  main-98e12e0c76fb286a10a8.js  main-a88a4482941f5eb1aac6.js
config/: nginx.conf  urls.py  wsgi.py
config/settings/: base.py  celery.py  local.py  production.py  test.py
docs/: Makefile  OSCE Bank.txt  conf.py  howto.rst  index.rst  insta detailts.txt  make.bat  users.rst
docs/example config files/: .env.example  celery.service  celerybeat.service
docs/pycharm/: configuration.rst
frontend/: build_prod.sh  config-overrides.js  package.json  tsconfig.json  webpack.config.js
frontend/config/: webpack.config.js
frontend/src/: App.css  App.tsx  index.js  index.tsx
frontend/src/components/: JuicerFeed.tsx  Main.tsx  MedusaMCQ.tsx  Navbar.tsx  RootStore.tsx  Signup.tsx  User.tsx
frontend/src/js/: InstagramFeed.js
frontend/src/mcq_bank/: App.css  App.tsx  QuestionsList.tsx  RootStore.tsx  index.tsx
frontend/src/pages/: About.tsx  Events.tsx  Home.tsx  MedusaMCQ.tsx  Members.tsx  User.tsx
frontend/src/types/: react-juicer-feed.d.ts
medusa_website/: __init__.py  celery.py  conftest.py
medusa_website/frontend/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
medusa_website/frontend/migrations/: 0001_initial.py  0001_squashed_0010_auto_20210822_1900.py  0002_alter_officialdocumentation_publish_year.py  0002_supporter.py  0003_alter_supporter_image.py  0003_auto_20220121_1311.py  0004_alter_publicationtype_machine_type.py  0004_officialdocumentation.py  0005_alter_officialdocumentation_options.py  0005_alter_publicationtype_machine_type.py  0006_auto_20220121_1337.py  0006_officialdocumentation_publish_year.py  0007_publication.py  0008_conferencereport.py  0009_auto_20210822_1849.py  0010_auto_20210822_1900.py
medusa_website/gmailapi_backend/: mail.py
medusa_website/mcq_bank/: admin.py  apps.py  exceptions.py  forms.py  new_views.py  serializers.py  urls.py  utils.py  views.py
medusa_website/mcq_bank/migrations/: 0001_inital.py  0001_initial.py  0001_squashed_0021_alter_question_explanation.py  0002_answer_is_correct.py  0002_auto_20210404_0944.py  0002_auto_20211202_0736.py  0002_auto_20220101_1755.py  0002_initial.py  0003_auto_20201204_1505.py  0003_auto_20210614_1038.py  0003_quizsession.py  0004_auto_20201204_1737.py  0004_auto_20210404_2012.py  0004_auto_20210614_1321.py  0005_alter_question_author.py  0005_auto_20201204_1802.py  0005_auto_20210404_2020.py  0006_auto_20201207_2135.py  0006_auto_20210405_1710.py  0006_auto_20210614_2046.py  0007_auto_20210606_2134.py  (+20 more)
medusa_website/org_chart/: OrgChart.xlsx  admin.py  apps.py  card_template.html  gen_org_chart.py  import_committee.py  models.py  org_chart_example.html  org_chart_output.html  org_chart_template.html
medusa_website/osce_bank/: admin.py  apps.py  forms.py  urls.py
medusa_website/pages/: views.py
medusa_website/site/: urls.py  views.py
medusa_website/static/: humans.txt  robots.txt
medusa_website/templates/: 403.html  404.html  500.html  base.html  base_depreciated.html  footer.html  messages.html
medusa_website/users/: adapters.py  admin.py  apps.py  forms.py  import.py  models.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
medusa_website/utils/: custom_middleware.py  general.py  widgets.py
requirements/: base.txt  local.txt  production.txt
scripts/: backup_db.sh  env_config.sh  lib.trap.sh  load_db.sh  notes_on_deploy.md  notes_on_deploy.txt  scratch.py  trap.bash
scripts/import_medusaq/: McqData20200217001359.csv  McqData20201017034440.csv  McqData_cleaned.csv  import_medusq.py
utility/: make_db_backup.sh
(+271 files in other folders)
