[tool.poetry]
name = "medusa_website"
version = "0.1.0"
description = "Website for the MeDUSA org"
authors = ["Chris Culhane <cfculhane@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "=3.9"
Django = "^3.1.0"
pytz = "^2020.4"  # https://github.com/stub42/pytz
python-slugify = "^4.0.1"  # https://github.com/un33k/python-slugify
Pillow = "^8.0.1"  # https://github.com/python-pillow/Pillow
argon2-cffi = "^20.1.0"  # https://github.com/hynek/argon2_cffi
whitenoise = "^5.2.0"  # https://github.com/evansd/whitenoise
redis = "^3.5.3"  # https://github.com/andymccurdy/redis-py
django-environ = "^0.4.5"  # https://github.com/joke2k/django-environ
django-model-utils = "^4.1.1"  # https://github.com/jazzband/django-model-utils
django-allauth = "^0.44.0"  # https://github.com/pennersr/django-allauth
django-crispy-forms = "^1.11.0 " # https://github.com/django-crispy-forms/django-crispy-forms
django-redis = "^4.12.1"  # https://github.com/jazzband/django-redis
django-anymail = "^8.1"  # https://github.com/anymail/django-anymail
pandas = "^1.2.4"
gunicorn = "^20.1.0"
psycopg2 = "^2.8.6"
hiredis = "^2.0.0"
factory-boy = "^3.2.0"
django-debug-toolbar = "^3.2.1"
django-extensions = "^3.1.3"
django-coverage-plugin = "^1.8.0"
pytest = "^6.2.4"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"
django-rest-authtoken = "^2.1.3"
django-webpack-loader = "^1.0.0"
django-imagekit = "^4.0.2"
django-username-email = "^2.4.2"
django-pg-copy = "^0.4.0"
openpyxl = "^3.0.7"
django-vanilla-views = "^3.0.0"
black = "^21.5b2"
pre-commit = "^2.13.0"
pylint-django = "^2.4.4"
flake8-isort = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
