[tool.black]
line-length = 120
target-version = ['py310']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
/migrations/  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "medusa_website"
version = "0.1.0"
description = "Website for medusa.org.au"
authors = ["Chris Culhane <cfculhane@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "~4.0"
django-allauth = "0.51.0"
django-anymail = "8.6"
django-cors-headers = ">=3.7.0"
django-coverage-plugin = ">=1.8.0"
django-crispy-forms = ">=1.11.0"
django-debug-toolbar = ">=3.2.1"
django-environ = ">=0.4.5"
django-extensions = ">=3.1.3"
django-imagekit = ">=4.0.2"
django-model-utils = ">=4.1.1"
django-pg-copy = ">=0.4.0"
django-redis = ">=4.12.1"
django-username-email = "2.5.3"
django-vanilla-views = ">=3.0.0"
django-bootstrap-modal-forms = ">=2.2.0"
django-widget-tweaks = ">=1.4.8"
django-pagedown = ">=2.2.0"
django-tables2 = ">=2.4.0"
django-bootstrap3 = ">=15.0.0"
django-filter = ">=2.4.0"
django-extra-views = ">=0.14.0"
djangorestframework = ">=3.12.4"
django-rest-authtoken = ">=2.1.3"
djangocms-admin-style = "^2.0.2"
django-tinymce = ">=3.3.0"
django-colorfield = "^0.6.0"
django-memoize = "^2.3.1"
django-pipeline = ">=2.0.6"
libsasscompiler = "^0.1.9"
google-api-python-client = ">=2.19.1"
google-auth = ">=1.28.0"
pytest = ">=6.2.4"
factory-boy = ">=3.2.0"
flake8-isort = ">=4.0.0"
pre-commit = ">=2.13.0"
rich = ">=10.2.2"
pylint-django = ">=2.4.4"
Markdown = ">=3.3.4"
martor = ">=1.6.4"
Pillow = ">=8.0.1"
openpyxl = ">=3.0.7"
pandas = ">=1.2.4"
python-slugify = ">=4.0.1"
Wand = ">=0.6.6"
dateparser = ">=1.0.0"
nameparser = "^1.0.6"
celery = ">=5.1.2"
pytz = ">=2020.4"
argon2-cffi = ">=20.1.0"
tqdm = "^4.62.3"
sentry-sdk = ">=1.4.1"
gunicorn = ">=20.1.0"
hiredis = ">=2.0.0"
psycopg2 = ">=2.8.6"
redis = ">=3.5.3"
whitenoise = ">=5.2.0"
django-celery-results = "^2.2.0"
django-celery-beat = "^2.2.1"
colorlog = "^6.6.0"
libsass = "^0.21.0"
django-compressor = "^3.1"
django-sass-processor = "^1.1"
playwright = "^1.17.2"
django-lifecycle = "^0.9.3"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "22.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
